actually knn is best oops

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,21 +373,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Without even looking at the further metrics, we see that the Naive Bayes classifier is actually just getting its decent accuracy score by picking a negative match 100% of the time. This is definitely not what we want!"
+    "Before even looking at the further metrics, we see that the Naive Bayes classifier is actually just getting its decent accuracy score by picking a negative match 100% of the time. This is definitely not what we want!\n",
+    "\n",
+    "However, even when selecting a low threshold, our accuracy is around 63%. This is a poor accuracy compred to the other models below, and our other metrics are also much lower."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before selecting optimum threshold:\n",
+      "{'TP': 0, 'TN': 1728, 'FP': 0, 'FN': 359}\n",
+      "\n",
+      "Selecting optimum threshold:\n",
+      "[0.44, 0.16, 0.21, 0.23]\n",
+      "Selected best threshold based on F1 Score, TSS, and GSS: 0.19999999999999998\n",
+      "{'TP': 166, 'TN': 1150, 'FP': 578, 'FN': 193}\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'TP': 0, 'TN': 1728, 'FP': 0, 'FN': 359}"
+       "{'accuracy': 0.6305701964542405,\n",
+       " 'precision': 0.22311827956989247,\n",
+       " 'recall': 0.4623955431754875,\n",
+       " 'f1score': 0.3009972801450589,\n",
+       " 'tss': 0.12790480243474672,\n",
+       " 'gss': 0.04699414779353278}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,49 +416,19 @@
     "p_scores, score = nb_model(x_train, x_test, y_train, y_test, **nb_params)\n",
     "# print(pick_threshold_all_metrics(y_test, p_scores))\n",
     "\n",
-    "binary_conf_matrix(list(y_test), p_scores, 0.5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "While the K Neighbors model produces a good accuracy, it scores much lower on all other metrics than the decision tree does. It also claims to do best with thresholds of of 0.01, meaning simply picking almost every match as successful with no refusals, which is not what we want."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.42, 0.42, 0.21, 0.42]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'accuracy': 0.8667944417824629,\n",
-       " 'precision': 0.7165775401069518,\n",
-       " 'recall': 0.3732590529247911,\n",
-       " 'f1score': 0.49084249084249093,\n",
-       " 'tss': 0.34258775662849483,\n",
-       " 'gss': 0.26809896671044053}"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "p_scores, score = knn_model(x_train, x_test, y_train, y_test, **knn_params)\n",
+    "print('Before selecting optimum threshold:')\n",
+    "print(binary_conf_matrix(list(y_test), p_scores, 0.5))\n",
     "\n",
-    "print(pick_threshold_all_metrics(list(y_test), p_scores))\n",
-    "get_metrics(list(y_test), p_scores, 0.5)"
+    "print('\\nSelecting optimum threshold:')\n",
+    "thresholds = pick_threshold_all_metrics(list(y_test), p_scores)\n",
+    "print(thresholds)\n",
+    "\n",
+    "avg_best_thresh = (thresholds[1] + thresholds[2] + thresholds[3]) / 3\n",
+    "print(f'Selected best threshold based on F1 Score, TSS, and GSS: {avg_best_thresh}')\n",
+    "\n",
+    "print(binary_conf_matrix(list(y_test), p_scores, avg_best_thresh))\n",
+    "\n",
+    "get_metrics(list(y_test), p_scores, avg_best_thresh)"
    ]
   },
   {
@@ -449,14 +439,12 @@
     "\n",
     "Asking for the best threshold per metric usually returns `[0.67, 0.29, 0.12, 0.41]` (sometimes these numbers are slightly different, depending on the parameters selected above, but the last 3 generally average around 0.28 altogether). The high first number is when tested with accuracy; because this dataset has far more failed matches than successful ones, so pure accuracy would be biased towards the negative result (high threshold). However, the other three favor a lower threshold, so that's what we consider for the threshold for the following metrics.\n",
     "\n",
-    "With this, we retain good accuracy (around 0.80) while having high other metrics. Additionally, we are more biased towards positive matches, which is a good thing -- we would prefer to have a possible match to show a user than not have anything to show at all when someone uses this app.\n",
-    "\n",
-    "Thus, we will recommend the Decision Tree model, with the hyperparameters selected above and a decision threshold being an average between the best for F1 Score, TSS, and GSS, (so usually around 0.28) for the client's app."
+    "With this, we retain good accuracy (around 0.80) while having high other metrics. Additionally, we are more biased towards positive matches, which is a good thing -- we would prefer to have a possible match to show a user than not have anything to show at all when someone uses this app."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -465,27 +453,78 @@
      "text": [
       "[0.67, 0.29, 0.12, 0.37]\n",
       "Selected best threshold based on F1 Score, TSS, and GSS: 0.26\n",
-      "{'TP': 152, 'TN': 1503, 'FP': 225, 'FN': 207}\n"
+      "{'TP': 165, 'TN': 1492, 'FP': 236, 'FN': 194}\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'accuracy': 0.7930043124101581,\n",
-       " 'precision': 0.40318302387267907,\n",
-       " 'recall': 0.4233983286908078,\n",
-       " 'f1score': 0.4130434782608696,\n",
-       " 'tss': 0.2931899953574745,\n",
-       " 'gss': 0.16786975121485234}"
+       "{'accuracy': 0.7939626257786296,\n",
+       " 'precision': 0.4114713216957606,\n",
+       " 'recall': 0.4596100278551532,\n",
+       " 'f1score': 0.4342105263157895,\n",
+       " 'tss': 0.32303595378107913,\n",
+       " 'gss': 0.1825422706744179}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "p_scores, score = tree_model(x_train, x_test, y_train, y_test, **tree_params)\n",
+    "\n",
+    "thresholds = pick_threshold_all_metrics(list(y_test), p_scores)\n",
+    "print(thresholds)\n",
+    "\n",
+    "avg_best_thresh = (thresholds[1] + thresholds[2] + thresholds[3]) / 3\n",
+    "print(f'Selected best threshold based on F1 Score, TSS, and GSS: {avg_best_thresh}')\n",
+    "\n",
+    "print(binary_conf_matrix(list(y_test), p_scores, avg_best_thresh))\n",
+    "\n",
+    "get_metrics(list(y_test), p_scores, avg_best_thresh)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The K Neighbors model has similarly robust results, but with even higher metrics. With an optimum threshold of about 0.35 and an accuracy around 0.85, this is the model we recommend to our client for this app."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.42, 0.42, 0.21, 0.42]\n",
+      "Selected best threshold based on F1 Score, TSS, and GSS: 0.35000000000000003\n",
+      "{'TP': 232, 'TN': 1534, 'FP': 194, 'FN': 127}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'accuracy': 0.8461907043603258,\n",
+       " 'precision': 0.5446009389671361,\n",
+       " 'recall': 0.6462395543175488,\n",
+       " 'f1score': 0.5910828025477708,\n",
+       " 'tss': 0.5339710357990303,\n",
+       " 'gss': 0.3308605771007524}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_scores, score = knn_model(x_train, x_test, y_train, y_test, **knn_params)\n",
     "\n",
     "thresholds = pick_threshold_all_metrics(list(y_test), p_scores)\n",
     "print(thresholds)\n",
