--- a/data_processing.ipynb
+++ b/data_processing.ipynb
@@ -6,12 +6,14 @@
    "source": [
     "## 1. Dataset Creation\n",
     "\n",
-    "Converting `cupid_scientists_original.csv` to `dataset_adjusted.csv`. This section of code takes about 10 minutes to run, and can be skipped if you want, as we've included the `dataset_adjusted.csv` file."
+    "Converting `cupid_scientists_original.csv` to `dataset_adjusted.csv`. This section of code takes about 10 minutes to run, and can be skipped if you want, as we've included the `dataset_adjusted.csv` file.\n",
+    "\n",
+    "All data is included because altogether it is only 11 MB. However, you may download our original and pre-processed datasets externally [here](https://drive.google.com/drive/folders/1VWyO-fxJr0Z3zxB8tg4ejY3ulmz74eYB?usp=sharing)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +509,7 @@
        "14       2.04        "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +678,7 @@
        "3       16.46        "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -743,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1168,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -1533,7 +1535,7 @@
        "[8346 rows x 19 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1567,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +1918,7 @@
        "[8346 rows x 19 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1955,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1980,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2008,7 +2010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2060,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2095,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2134,7 +2136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2159,7 +2161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2229,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2253,7 +2255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2269,7 +2271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2315,7 +2317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2347,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2368,7 +2370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2522,7 +2524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2545,7 +2547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2561,7 +2563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2600,7 +2602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -2659,7 +2661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -2981,7 +2983,7 @@
        "[8346 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
